@@ -1,6 +1,6 @@
 #!/bin/sh
 # -*- coding: utf-8 -*-
-# Copyright (C) 2013, 2016, 2019 Laboratoire de Recherche et
+# Copyright (C) 2013, 2016, 2019, 2020 Laboratoire de Recherche et
 # Développement de l'Epita (LRDE).
 #
 # This file is part of Spot, a model checking library.
@@ -95,7 +95,6 @@ test `grep '^error:' errors | wc -l` = 4
 run 1 ltlcross --verbose -D -f 'G(F(p0) & F(G(!p1))) | (F(G(!p0)) & G(F(p1)))' \
   "ltl2tgba --lbtt %f >%T" "./fake %l >%T" 2> errors
 cat errors
-test `grep 'info:	Comp(' errors | wc -l` = 3
 grep 'error: P0\*N1 is nonempty' errors
 grep 'error: P1\*N0 is nonempty' errors
 grep 'error: P1\*N1 is nonempty' errors
